--- a/frontend/style/alamatPengiriman.css
+++ b/frontend/style/alamatPengiriman.css
@@ -40,5 +40,14 @@ h6 {
 
 #tombol {
     color: white    ;
-    background-color: #0d6efd;
+    background-color: #4e73df;
+}
+
+#border{
+    border: #4e73df;
+}
+
+#head {
+    border-color: #4e73df;
+    background-color: #4e73df;
 }
